cc : Fix transform calculation bug while calculating clip rects

The bug is while calculating the transform from a clip parent's target
to clip child's target. We weren't taking into account the surface
contents scale at both targets. This CL fixes that.
Also verified that the new clip rects path (which is behind a flag)
doesn't have this bug, we do the correct scaling there already.

BUG=693213
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2712053002
Cr-Commit-Position: refs/heads/master@{#452987}

Former-commit-id: 264a0dd42bb8612ab0d2d60645e722a7758b013e